# nautobot-plugin-ssot-servicenow

./: .flake8  .travis.yml  CHANGELOG.md  FAQ.md  README.md  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  upstream_testing.yml
development/: Dockerfile  creds.example.env  dev.env  docker-compose.base.yml  nautobot_config.py
docs/: contributing.md  index.md
nautobot_ssot_servicenow/: __init__.py  forms.py  jobs.py  models.py  servicenow.py  views.py  worker.py
nautobot_ssot_servicenow/data/: mappings.yaml
nautobot_ssot_servicenow/diffsync/: adapter_nautobot.py  adapter_servicenow.py  models.py
nautobot_ssot_servicenow/diffsync/tonb/: nbutils.py  tonb_adapter_nautobot.py  tonb_adapter_servicenow.py  tonb_models.py
nautobot_ssot_servicenow/migrations/: 0001_initial.py
nautobot_ssot_servicenow/templates/nautobot_ssot_servicenow/: config.html
nautobot_ssot_servicenow/tests/: test_adapter_nautobot.py  test_adapter_servicenow.py  test_jobs.py
